web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__transforms__join__examples__1.snap
---
source: web/book/tests/documentation/book.rs
expression: "from db.tracks\njoin side:left db.artists (\n  # This adds a `country` condition, as an alternative to filtering\n  artists.id==tracks.artist_id && artists.country=='UK'\n)\n"
---
SELECT
  tracks.*,
  artists.*
FROM
  tracks
  LEFT JOIN artists ON artists.id = tracks.artist_id
  AND artists.country = 'UK'

