web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__transforms__join__examples__3.snap
---
source: web/book/tests/documentation/book.rs
expression: "from shirts\njoin hats true\n"
---
SELECT
  shirts.*,
  hats.*
FROM
  shirts
  INNER JOIN hats ON true
